<resources>
    <string name="app_name">QRCode_AppDev</string>
    <string name="action_scan">quét</string>
    <string name="action_create">Tạo</string>
    <string name="action_history">Lịch sử</string>
    <string name="action_setting">Cài đặt</string>
    <string name="url_link_result"><u>URL link</u></string>
    <string name="txt_copy">Sao chép</string>
    <string name="share">Chia sẻ</string>
    <string name="open_browser">Mở trình duyệt</string>
    <string name="send_email">Gửi email</string>
    <string name="send_sms">Gửi sms</string>
    <string name="phone_call">Gọi điện</string>
    <string name="located">Vị trí</string>
    <string name="add_contact">Thêm vào liên hệ</string>
    <string-array name="string_wifi_type">
        <item>None</item>
        <item>WPA/WPA2</item>
        <item>WEP</item>
    </string-array>
</resources>